<resources>
    <string name="app_name">TriWay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.email@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">hello world</string>

    <string name="Email">Enter Your Email</string>
    <string name="Password">Enter Your Password</string>
    <string name="Re_enter_password">Re-enter Your password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Login">Login</string>
    <string name="Logo">Logo</string>

    <string name="home_search">Where is your\nnext destination?</string>
    <string name="travel">Travel</string>
    <string name="plan">Plan</string>
    <string name="efficiency">Efficiency</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="sign_up_button">Start Your Journey!</string>
    <string name="sign_up_title">...Tell us some basic information</string>
    <string name="login">Login</string>
    <string name="signup_title">Sign up</string>
    <string name="signup_tellus">...Tell us some basic information</string>
    <string name="sign_out">Sign out</string>
    <string name="reset_password">Reset</string>
    <string name="facebook_app_id">318083535731660</string>
    <string name="fb_login_protocol_scheme">fb318083535731660</string>
    <string name="enter_email">Enter your Email address</string>
    <string name="dialog_delete_message">U sure wanna delete this plan?</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="forget_password">Forget my password ;(</string>

    <string-array name="days_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
